# ai-agents-workflows-course

./: 04-multi-step-multi-model.md  05-using-local-open-models.py  06-structured-outputs.py  07-structured-outputs-pydantic.py  08-another-example-content-generation.py  09-generating-images.py  10-control-flow.py  11-human-in-the-loop.py  12-external-service-slack.py  13-final-version.py  TODO.md  main.py  post-examples.json  pyproject.toml
Resources/: Model selection - OpenAI API.url  Potential Problems & Security Risks.md  Using Prompt Engineering To Control Output.md  json_schemas_structured_outputs.md  ollama-docs.url
example_posts/: Gemma 3n May Be Amazing.mdx  My Top 5 Ways of Using Generative AI and LLMs.mdx
new_post/: ai-workflows-vs-agents_draft.md
